Self_Paced_Exercices/Securing_Workloads/HTTPS_Gateway/src/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-nginx
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: oriolfilter/https-nginx-demo
          imagePullPolicy: Always #Always
          ports:
            - containerPort: 80
