Self_Paced_Exercices/Securing_Workloads/HTTPS_Gateway/src/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      appProtocol: HTTP
  selector:
    app: helloworld
